--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -7,8 +7,8 @@ ja:
       next: "次 &rsaquo;"
       truncate: "..."
 
-# ja:
-#   time:
-#     formats:
-#       default: "%Y/%m/%d %H:%M:%S"
-#       short: "%m/%d %H:%M"
+ja:
+  time:
+    formats:
+      default: "%Y/%m/%d %H:%M:%S"
+      short: "%m/%d %H:%M"
